Changelog
=========


1.9.4 (unreleased)
------------------

- Use "python-ldap" < 3.0.0b1. [mbaechtold]


1.9.3 (2017-01-05)
------------------

- Remove support for Plone 4.1.
  [mbaechtold]

- Fix translations.
  [mbaechtold]


1.9.2 (2016-07-05)
------------------

- Fix ImageBuilder import for testing.
  [mathias.leimgruber]


1.9.1 (2016-06-21)
------------------

- Fix sync_contacts command execution.
  [lknoepfel]


1.9.0 (2016-03-30)
------------------

- Adjust address, phone and email handling in contacts view.
  The phone and email were listed in the address section.
  If no address was given, the phone and e-mail was no longer be displayed.
  Each phone number and the email are in its own sections now and will be shown
  when available.
  [elioschmutz]

- Add allowable_content_types for contacts text field.
  This will remove the dropdown field to choose the contenttype on
  the text-field widget.
  [elioschmutz]

- Move sync command in it's own module.
  This prevents an import error if the ldap extra is not installed.
  [mathias.leimgruber]

- Fix default_output_type of text-field in contact schema.
  Change it from html to x-html-save.
  [elioschmutz]

- Fix sync_contacts entry point to handle parameters with spaces correctly.
  [buchi]


1.8.0 (2015-12-23)
------------------

- Restrict versions of some dependencies so they don't pull in Plone 5.
  [mbaechtold]

- Add functionality to toggle showing memberships with the new
  show_memberships attribute.
  [elioschmutz]

- Add support for synchronization of contacts from LDAP
  [buchi]

- Point the link of the contact memberships to the parent object, i.e.
  the object where the member is assigned to.
  [mbaechtold]

- No longer use the deprecated "simplelayout.types.common". Use
  "ftw.contentpage" instead.
  [mbaechtold]


1.7.2 (2015-09-23)
------------------

- Make complete Address a single entry so it can be copied.
  [tschanzt]


1.7.1 (2015-08-11)
------------------

- Added vCard download.