@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="portal_actions" meta_type="Plone Actions Tool"
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+
+    <object name="document_actions" meta_type="CMF Action Category">
+        <object name="vcard_download" remove="True" />
+	</object>
+</object>
