@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<object name="portal_css" meta_type="Stylesheets Registry" autogroup="False">
+    <stylesheet id="++resource++egov-contactdirectory-resources/contactdirectory.css"
+        remove="True" />
+</object>
