@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<object name="portal_skins">
+
+ <object name="egov_contactdirectory"
+    meta_type="Filesystem Directory View"
+    directory="egov.contactdirectory:skins/egov_contactdirectory" remove="True" />
+
+ <skin-path name="*">
+  <layer name="egov_contactdirectory" remove="True" />
+ </skin-path>
+
+</object>
