@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<object name="portal_types" meta_type="Plone Types Tool">
+ <object name="Contact"
+         meta_type="Factory-based Type Information with dynamic views" remove="True" />
+ <object name="Member"
+         meta_type="Factory-based Type Information with dynamic views" remove="True" />
+</object>
