@@ -6,6 +6,7 @@ Changelog
 ------------------
 
 - Use "python-ldap" < 3.0.0b1. [mbaechtold]
+- Add uninstall profile [djowett-ftw]
 
 
 1.9.3 (2017-01-05)
